# treadmill

./: .git_commit_msg  .gitignore  .pr_body.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
cli/: AGENT.md  pyproject.toml
cli/agent-changes/: 2026-06-13-5d14fbcc-model-pin.md
cli/tests/: test_adr_api_coverage.py  test_cli.py  test_cli_plan_submit.py  test_cli_repo_add.py  test_cli_task_retry.py  test_cli_team_up.py  test_cli_workflows_trigger.py  test_escalations_command.py  test_identity.py  test_integration_cli.py  test_integration_cli_seed.py  test_learnings_command.py  test_migration_chain.py  test_observe_command.py  test_onboarding_update.py  test_plan_validate.py  test_promote_command.py  test_schedules_command.py  test_tokens_command.py
cli/treadmill_cli/: __init__.py  adr_api_coverage.py  api_client.py  cli.py  config.py  identity.py  migration_chain.py  observe.py  plan_validate.py
cli/treadmill_cli/commands/: corpus.py  escalations.py  learnings.py  onboarding.py  promote.py  repo.py  schedules.py  team.py  tokens.py
infra/: AGENT.md  cdk.json  pyproject.toml
infra/lambdas/webhook_receiver/: handler.py
infra/observability/: docker-compose.local.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.local.yaml  tempo-config.yaml
infra/observability/dashboards/: treadmill-overview.json
infra/observability/grafana/: dashboards.yml  datasources.yml
infra/tests/: test_app_dispatch.py  test_cloud_lite_stack.py  test_observability_construct.py  test_secrets_construct.py  test_webhook_receiver_construct.py
infra/treadmill_infra/: app.py
infra/treadmill_infra/constructs/: __init__.py  deploy_events.py  messaging.py  observability.py  secrets.py  webhook_receiver.py
infra/treadmill_infra/stacks/: __init__.py  cloud_lite.py  observability.py
services/api/: AGENT.md  Dockerfile  alembic.ini  pyproject.toml
services/api/agent-changes/: 2026-06-12-690ee089-quiescence-registered-fix.md  2026-06-13-a5685d64-task-executions-status-filter.md  2026-06-15-c31e0994-scheduler-ranked-list.md
services/api/alembic/: env.py  script.py.mako
services/api/tests/: test_arch_cap_operator_surface.py  test_architect_emit_failure_event.py  test_architect_emit_failure_trigger.py  test_architect_verdict.py  test_auto_merge_block.py  test_auto_merge_loop.py  test_auto_merge_trigger.py  test_auto_seed_starters_on_submit.py  test_cache.py  test_ci_observer.py  test_claude_credentials_router.py  test_cli.py  test_config.py  test_consumer_integration.py  test_consumer_trace_replay.py  test_consumer_triage_outcome.py  test_consumer_unit.py  test_context_docs_router.py  test_context_store.py  test_coordinator_cap_overlay.py  test_corpus_export.py  test_crystallization_verdict.py  test_database.py  test_dependencies.py  test_dispatch_dedup.py  test_dispatch_unit.py  test_escalation_close_sweep.py  test_event_projector_unit.py  test_eventbus_unit.py  test_events.py  test_events_task_retry.py  test_expected_followup.py  test_fleet_wedge_sweep.py  test_gate_broken_end_to_end.py  test_gate_broken_trigger.py  test_github_app.py  test_github_auth.py  test_github_clients.py  test_github_installations.py  test_github_token_endpoint.py  (+133 more)
services/api/treadmill_api/: __init__.py  app.py  cache.py  ci_observer.py  cli.py  config.py  context_store.py  corpus_export.py  database.py  dependencies.py  dependencies_db.py  dispatch.py  eventbus.py  github_app.py  github_auth.py  github_installations.py  health.py  observability.py  onboarding_store.py  output_kind.py  repo_config.py  repo_profile.py  resolvers.py  starters.py  team_config_store.py  triage_store.py
services/egress-proxy/: AGENT.md  Dockerfile  pyproject.toml
services/egress-proxy/tests/: test_config.py  test_proxy.py
services/egress-proxy/treadmill_egress_proxy/: __main__.py  config.py  proxy.py
tools/local-adapter/: AGENT.md  pyproject.toml
tools/local-adapter/agent-changes/: 2026-06-12-1518598a-team-scheduler-hardening.md
tools/local-adapter/scripts/: smoke_boot.sh
tools/local-adapter/tests/: conftest.py  test_account_pool.py  test_agent_image_has_cdk.py  test_agent_image_has_make.py  test_autoscaler.py  test_autoscaler_fallback.py  test_cli.py  test_corpus_uri_plumbing.py  test_deploy_watcher.py  test_deploy_watcher_singleton.py  test_deployment_config.py  test_docs_sync.py  test_egress_proxy_integration.py  test_image_build.py  test_managed_credentials.py  test_obsidian_secret_leak_gate.py  test_obsidian_sync_core.py  test_onboard.py  test_provisioner.py  test_pulumi_access_token_plumbing.py  test_pytest_harness.py  test_repos.py  test_runner.py  test_runtime.py  test_runtime_dev_local.py  test_smoke_boot.py  test_staleness.py  test_subprocess_logging.py  test_synth.py  test_team_scheduler.py
tools/local-adapter/treadmill_local/: AGENT.md  __init__.py  account_pool.py  autoscaler.py  cli.py  deploy_watcher.py  deployment_config.py  docker_client.py  docs_sync.py  egress_proxy.py  managed_credentials.py  obsidian_gates.py  obsidian_sync.py  onboard.py  provisioner.py  pytest_harness.py  repos.py  runner.py  runtime.py  staleness.py  subprocess_logging.py  synth.py  team_scheduler.py
workers/agent/: AGENT.md  Dockerfile  pyproject.toml
workers/agent/tests/: conftest.py  test_api_client.py  test_claude_code.py  test_claude_code_env.py  test_claude_code_operator_hint.py  test_claude_code_real_binary.py  test_code_disposition_pr_body.py  test_config.py  test_conflict_preresolve.py  test_dockerfile.py  test_event_schema_drift.py  test_eventbus.py  test_git.py  test_git_credential_helper.py  test_integration_container.py  test_integration_real_claude.py  test_integration_real_claude_multistep.py  test_integration_two_step_smoke.py  test_judge_eval.py  test_log_excerpt_pipeline.py  test_observability.py  test_pr_comment.py  test_pr_kinds.py  test_repo_config_propagation.py  test_repo_deps.py  test_repo_deps_integration.py  test_review_disposition_prose_synthesis.py  test_role_eval.py  test_runner.py  test_runner_dispositions.py  (+6 more)
workers/noop/: Dockerfile  pyproject.toml
(+754 files in other folders)
