[project]
name = "treadmill"
version = "0.0.0"
description = "Treadmill — opinionated agentic runner"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["cli", "infra", "services/api", "tools/local-adapter", "workers/agent", "workers/noop"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
