[project]
name = "treadmill-cli"
version = "0.0.0"
description = "Treadmill CLI — orchestrator's interface to the API per ADR-0010"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
treadmill = "treadmill_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["treadmill_cli"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
