[project]
name = "treadmill-egress-proxy"
version = "0.0.0"
description = "Treadmill egress proxy — HTTP CONNECT proxy with per-worker allowlist enforcement (ADR-0060)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.scripts]
treadmill-egress-proxy = "treadmill_egress_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["treadmill_egress_proxy"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
