[project]
name = "treadmill-local"
version = "0.0.0"
description = "Treadmill-native local adapter — interprets CDK synth output to run AWS-managed services in moto and ECS task definitions as native Docker containers"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "docker>=7.1.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    # Used by the pytest harness (``treadmill_local.pytest_harness``) to
    # poll the API's /health/ready while bringing the substrate up. Kept
    # as a runtime dep rather than a test extra so consumers (worker
    # integration tests) can import ``treadmill_local.wait_until_ready``
    # without configuring extras.
    "httpx>=0.27.0",
    # Used by ``treadmill_local.deployment_config`` to write
    # ``~/.treadmill/<deployment_id>.yaml`` per ADR-0016's schema. The
    # ``services/api`` project already depends on pyyaml; same library
    # here keeps the spelling consistent across the codebase.
    "pyyaml>=6.0.0",
]

[project.scripts]
treadmill-local = "treadmill_local.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["treadmill_local"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "moto[server]>=5.0.0",
    # In-process import for the egress proxy integration smoke test
    # (tests/test_egress_proxy_integration.py) — ADR-0060 Step 3d.
    "treadmill-egress-proxy",
]

[tool.uv.sources]
treadmill-egress-proxy = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
