[project]
name = "treadmill-agent"
version = "0.0.0"
description = "Treadmill worker — fetches a step from the API, drives Claude Code in a workspace, opens a PR, publishes lifecycle events."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.7",
    "treadmill-api",
]

[tool.uv.sources]
treadmill-api = { workspace = true }

[project.scripts]
treadmill-agent = "treadmill_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["treadmill_agent"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
