[project]
name = "treadmill-noop-worker"
version = "0.0.0"
description = "Minimal noop worker used by the local adapter spike. Polls SQS once, processes the message, exits."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noop_worker"]
